Kubernetes/magnocorp-othub-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magnocorp-othub
  namespace: magnocorp-othub
  labels:
    app: magnocorp-othub
spec:
  replicas: 3
  selector:
    matchLabels:
      app: magnocorp-othub
  template:
    metadata:
      labels:
        app: magnocorp-othub
    spec:
      imagePullSecrets:
        - name: ghcr-regcred
      containers:
        - name: magnocorp-othub
          image: ghcr.io/ricmagno/magnocorpothub:v1.2.35
          ports:
            - containerPort: 3000
          imagePullPolicy: IfNotPresent
          envFrom: # Add this section to load env vars from Secret
            - secretRef:
                name: magnocorp-othub-env
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
          volumeMounts: # New section for volume mounts
            - name: historian-home
              mountPath: /home/historian
            - name: historian-data
              mountPath: /home/historian/data
            - name: historian-reports
              mountPath: /home/historian/reports
            - name: tz-config
              mountPath: /etc/localtime
              readOnly: true
            - name: tz-name
              mountPath: /etc/timezone
              readOnly: true
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      volumes: # New section for volumes
        - name: historian-home
          hostPath:
            path: /mnt/historian
            type: DirectoryOrCreate
        - name: historian-data
          hostPath:
            path: /mnt/historian/data
            type: DirectoryOrCreate
        - name: historian-reports
          hostPath:
            path: /mnt/historian/reports
            type: DirectoryOrCreate
        - name: tz-config
          hostPath:
            path: /etc/localtime
        - name: tz-name
          hostPath:
            path: /etc/timezone
