Kubernetes/magnocorp-othub-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magnocorp-othub-service
  namespace: magnocorp-othub
  labels:
    app: magnocorp-othub
spec:
  selector:
    app: magnocorp-othub
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30001
  type: NodePort
